[package]
name = "gjstore"
version = "0.1.0"
edition = "2024"

[dependencies]
parking_lot = "0.12.5"
serde_json = "1.0.149"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
json-patch = "3.0"
rand = "0.8"
rand_chacha = "0.3"
gjstore = { path = ".", features = ["bench-utils"] }

[features]
bench-utils = []

[[bench]]
name = "store_bench"
harness = false
