[package]
name = "gjstore"
version = "0.3.0"
authors = [
  "garypen <garypen@gmail.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/garypen/gjstore"
homepage = "https://github.com/garypen/gjstore"
documentation = "https://github.com/garypen/gjstore?tab=readme-ov-file"
edition = "2024"
readme = "README.md"
keywords = ["store", "json"]
categories = ["data-structures"]
description = "generational, garbage collected, json store"

[dependencies]
bon = "3.9.1"
parking_lot = "0.12.5"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive", "rc"] }
json-patch = "4.2"
thiserror = "2.0.11"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.10"
rand_chacha = "0.10"
gjstore = { path = ".", features = ["bench-utils"] }

[features]
bench-utils = []

[[bench]]
name = "store_bench"
harness = false
